# Cipollino

./: .gitignore  .gitmodules  CMakeLists.txt
mac/: Info.plist  bundle.sh
res/: icon.icns
src/client/: action.cpp  action.h  editor.cpp  editor.h  gui.cpp  gui.h  keychain.cpp  keychain.h  main.cpp  panel.cpp  panel.h  select.cpp  select.h  tool.cpp  tool.h
src/client/panels/: asset.h  assets.cpp  debug.cpp  debug.h  scene.cpp  scene.h  timeline.cpp  timeline.h  toolbar.cpp  toolbar.h
src/common/: common.cpp  common.h  dynarr.h  scanner.cpp  scanner.h
src/platform/: common.cpp  common.h  desktop.cpp  opengl.h  platform.h  web.cpp
src/project/: frame.cpp  gen.py  graphic.cpp  graphic.h  layer.cpp  op.cpp  op.h  project.cpp  project.h  stroke.cpp  stroke.h
src/protocol/: msg.cpp  msg.h  protocol.h
src/render/: builder.cpp  builder.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h
src/server/: keysmith.cpp  keysmith.h  main.cpp  server.cpp  server.h
web/: build.sh  index.html
